--- a/html/thuc-hanh-1/index.html
+++ b/html/thuc-hanh-1/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Test 2</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ti trung</title>
+    <link rel="stylesheet" href="thuchanh1.css" />
+  </head>
+  <body>
+    <div class="tep1">
+      <h1 id="line1">THIS PLACE</h1>
+      <h2 id="line2">Is Special...</h2>
+      <h3 id="line3">about us</h3>
+
+      <p id="paragraph">
+        due to its commanding position, in the second world war the fort house
+        was used by the military as an observation post and even had the roof
+        reinforced to proteck it from an aerial attack, with two feet of
+        conrete, making it bomb proof from enemy aircaft
+      </p>
+    </div>
+  </body>
 </html>
