--- a/html/thuc-hanh-4/index4.html
+++ b/html/thuc-hanh-4/index4.html
@@ -6,20 +6,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style4.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rowdies:wght@300&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="row1">
-      <button class="test"></button>
-      <div class="letter">
-        <h1>PICK YOUR BOX STYLE</h1>
-        <div><hr style="height: 2px;" id="line"></div>
-        <p>
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est
-          laborum.
+    <div class="fullcontent">
+      <div class="header">
+        <h1 id="line1">Farm Fresh To You</h1>
+        <p id="line2">
+          We deliver organic fruits & vegetables fresh from our fields to your.
         </p>
-        <a class="btn-link" href="vsdvsvd">LEARN MORE</a>
+        <p>Images from <a style="color: red" href="ajhafho">Freepik</a></p>
+      </div>
+      <div class="bodier">
+        <img
+          id="picture"
+          src="https://images02.nicepage.com/c461c07a441a5d220e8feb1a/d1ea4ec1b90e53b28376e977/healthy-food-basket_23-2147694076.jpg"
+          alt=""
+        />
+        <div class="paragraph">
+            <h2>PICK YOUR BOX STYLE</h2>
+            <hr id="line3" />
+            <p>
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <a id="line4" href="aefibfa">learn more</a>
+          </div>
+        <img
+          id="picture"
+          src="https://images02.nicepage.com/c461c07a441a5d220e8feb1a/77c9148d6c4555918b1a03fb/colorful-delicious-vegetables-arrangement_23-2148290786.jpg"
+          alt=""
+        /><div class="paragraph">
+            <h2>CUSTOMIZE YOUR PRODUCE</h2>
+            <hr id="line3" />
+            <p>
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+              cupidatat non proident, sunt in culpa qui officia deserunt mollit
+              anim id est laborum.
+            </p>
+            <a id="line4" href="aefibfa">learn more</a>
+          </div>
+        <img
+          id="picture"
+          src="https://images02.nicepage.com/c461c07a441a5d220e8feb1a/0a0a9c35429e525290179fca/flat-lay-vegetables-mix-cutting-board_23-2148369685.jpg"
+          alt=""
+        />
+        
+        <div class="paragraph">
+            <h2>ADD FERM PRODUCTS</h2>
+            <hr id="line3" />
+            <p>
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+              cupidatat non proident, sunt in culpa qui officia deserunt mollit
+              anim id est laborum.
+            </p>
+            <a id="line4" href="aefibfa">learn more</a>
+          </div>
       </div>
     </div>
   </body>
